# yobitsugi

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  LICENSE  README.md  SKILL.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  publish.yml
npm/: README.md  package.json
tests/: conftest.py  test_apply.py  test_cli.py  test_detect.py  test_installers.py  test_llm.py  test_parse.py  test_pipeline.py  test_summary.py  test_tools.py
yobitsugi/: __init__.py  __main__.py  cli.py
yobitsugi/core/: __init__.py  apply.py  detect.py  fix.py  llm.py  parse.py  pipeline.py  scan.py  summary.py  tests_gen.py  tools.py  validate.py
yobitsugi/data/: SKILL.md  eslint-security.eslintrc.json  fix_prompts.md  parser_recipes.md  providers.md  scanners.yaml  test_templates.md
yobitsugi/installers/: __init__.py  aider.py  base.py  claude.py  codex.py  copilot.py  cursor.py  gemini.py  opencode.py  utils.py
yobitsugi/templates/: slash_command.md
