[build-system]
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

[project]
name = "yobitsugi"
version = "0.1.0"
description = "Scan any repo with SAST/SCA tools and patch the vulnerabilities using your AI assistant's LLM. Works as a slash command in Claude Code, Codex, Cursor, Gemini CLI, Aider, OpenCode, and GitHub Copilot CLI."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Aryaroop Majumder" }]
keywords = ["security", "sast", "sca", "vulnerability-scanner", "vulnerability-fix", "ai", "llm", "claude-code", "codex", "cursor", "gemini-cli", "aider", "skills", "slash-command"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "pyyaml>=6.0",
    "requests>=2.31",
    "rich>=13.0",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.30"]
openai = ["openai>=1.0"]
all = ["anthropic>=0.30", "openai>=1.0"]
dev = ["pytest>=7", "ruff>=0.4", "mypy>=1.8"]

[project.scripts]
yobitsugi = "yobitsugi.cli:main"

[project.urls]
Homepage = "https://github.com/FiNiX-GaMmA/yobitsugi"
Repository = "https://github.com/FiNiX-GaMmA/yobitsugi"
Issues = "https://github.com/FiNiX-GaMmA/yobitsugi/issues"
Changelog = "https://github.com/FiNiX-GaMmA/yobitsugi/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["yobitsugi"]

[tool.hatch.build.targets.wheel.force-include]
"yobitsugi/data" = "yobitsugi/data"
"yobitsugi/templates" = "yobitsugi/templates"

[tool.hatch.build.targets.sdist]
include = [
    "yobitsugi/",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
    "pyproject.toml",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM"]
ignore = ["E501"]  # line-length handled by formatter

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
