[build-system]
requires = ["hatchling>=1.21.0", "hatch-vcs>=0.4.0"]
build-backend = "hatchling.build"

[project]
name = "yobitsugi"
dynamic = ["version"]
description = "Scan any repo with SAST/SCA tools and patch the vulnerabilities using your AI assistant's LLM. Works as a slash command in Claude Code, Codex, Cursor, Gemini CLI, Aider, OpenCode, and GitHub Copilot CLI."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Aryaroop Majumder" }]
keywords = ["security", "sast", "sca", "vulnerability-scanner", "vulnerability-fix", "ai", "llm", "claude-code", "codex", "cursor", "gemini-cli", "aider", "skills", "slash-command"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    # Core runtime — always required.
    "pyyaml>=6.0",
    "requests>=2.31",
    "rich>=13.0",
    # Pip-installable scanners. These are bundled as direct dependencies so
    # `pip install yobitsugi` (or the wheel) is one step to a working scan.
    # If you want a leaner install, drop these from the install line and use
    # `yobitsugi install-scanners` (persistent venv) or
    # `yobitsugi run/scan --ephemeral-tools` (throwaway venv) instead.
    "bandit>=1.7",
    "safety>=3.0",
    "pip-audit>=2.7",
    "semgrep>=1.50",
    "flawfinder>=2.0",
]

[project.optional-dependencies]
# `scanners` is an alias of the pip scanners that are already in the base
# install — kept here so callers can declare the dependency explicitly (for
# documentation, CI matrix entries, or downstream extras unions) without
# adding anything new. If the base `dependencies` ever drops them, this is
# the opt-in install path: `pip install "yobitsugi[scanners]"`.
#
# There used to be `openai` and `anthropic` extras for the bundled LLM
# client. That client (core/llm.py) was removed when yobitsugi became
# skill-first in v0.2 — fix generation now happens in the host AI assistant
# using its own LLM, so there's no LLM SDK for yobitsugi to depend on.
scanners = [
    "bandit>=1.7",
    "safety>=3.0",
    "pip-audit>=2.7",
    "semgrep>=1.50",
    "flawfinder>=2.0",
]
all = [
    "bandit>=1.7",
    "safety>=3.0",
    "pip-audit>=2.7",
    "semgrep>=1.50",
    "flawfinder>=2.0",
]
dev = ["pytest>=7", "ruff>=0.4", "mypy>=1.8"]

[project.scripts]
yobitsugi = "yobitsugi.cli:main"

[project.urls]
Homepage = "https://github.com/FiNiX-GaMmA/yobitsugi"
Repository = "https://github.com/FiNiX-GaMmA/yobitsugi"
Issues = "https://github.com/FiNiX-GaMmA/yobitsugi/issues"
Changelog = "https://github.com/FiNiX-GaMmA/yobitsugi/blob/main/CHANGELOG.md"

# Version is computed from the latest git tag (vX.Y.Z) at build time by hatch-vcs.
# Every push to main → workflow auto-tags vX.Y.(Z+1) → wheel metadata picks up the new
# version automatically. No manual edits to pyproject.toml or __init__.py are required.
[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "yobitsugi/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["yobitsugi"]
# Note: hatch includes all non-Python files (yobitsugi/data/*, yobitsugi/templates/*)
# under the package directory by default. Do NOT add force-include here — it would
# duplicate every entry and PyPI rejects wheels with duplicate ZIP entries.
exclude = [
    "yobitsugi/.claude",
    "yobitsugi/.claude/**",
    "**/__pycache__",
    "**/*.pyc",
    "**/.DS_Store",
]

[tool.hatch.build.targets.sdist]
include = [
    "yobitsugi/",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
    "pyproject.toml",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM"]
ignore = ["E501"]  # line-length handled by formatter

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
